# Pinochle

./: BUILD  MODULE.bazel  Main.kt
